Added Collector Service and Wall Creator Service

--- a/src/Onbox.Revit.Tests.Sample/Onbox.Revit.Tests.Sample.csproj
+++ b/src/Onbox.Revit.Tests.Sample/Onbox.Revit.Tests.Sample.csproj
@@ -242,7 +242,9 @@
     <Compile Include="Revit\Commands\Availability\AvailableOnFamily.cs" />
     <Compile Include="Revit\Commands\Availability\AvailableOnProject.cs" />
     <Compile Include="Revit\Commands\HelloCommand.cs" />
+    <Compile Include="Services\CollectorService.cs" />
     <Compile Include="Services\TaskMessageService.cs" />
+    <Compile Include="Services\WallCreatorService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -275,6 +277,9 @@
     <EmbeddedResource Include="Resources\RibbonImages\autodesk_logo32.png" />
     <EmbeddedResource Include="Resources\RibbonImages\onbox_logo16.png" />
     <EmbeddedResource Include="Resources\RibbonImages\onbox_logo32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Abstractions\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
