--- a/.github/workflows/revit_tests_project.yml
+++ b/.github/workflows/revit_tests_project.yml
@@ -22,8 +22,12 @@ jobs:
 #      uses: actions/upload-artifact@v2.2.2
 #      with:
 #        path: tests\Onbox.Revit.Tests\test_project.zip
-    - name: Login
-      uses: wei/curl@master
-      with:
-         args: |
-          -X POST 'https://developer.api.autodesk.com/authentication/v1/authenticate' --header 'Content-Type: application/x-www-form-urlencoded' --data-urlencode 'client_id=${{ secrets.CLIENT_ID }}' --data-urlencode 'client_secret=${{ secrets.CLIENT_SECRET }}' --data-urlencode 'grant_type=client_credentials' --data-urlencode 'scope=code:all data:write data:read bucket:create bucket:delete'
+     - name: Post
+     - uses: Amadevus/pwsh-script@v2.0.1
+       with:
+         script: |
+            $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
+            $headers.Add("Content-Type", "application/x-www-form-urlencoded")
+            $body = "client_id={{ secrets.CLIENT_ID }}&grant_type=client_credentials&scope=code%3Aall%20data%3Awrite%20data%3Aread%20bucket%3Acreate%20bucket%3Adelete"
+            $response = Invoke-RestMethod 'https://developer.api.autodesk.com/authentication/v1/authenticate' -Method 'POST' -Headers $headers -Body $body
+            $response | ConvertTo-Json
