--- a/.github/workflows/revit_tests_project.yml
+++ b/.github/workflows/revit_tests_project.yml
@@ -9,25 +9,34 @@ jobs:
     runs-on: windows-latest
 
     steps:
-#    - uses: actions/checkout@v2
-#    - name: Setup MSBuild
-#      uses: microsoft/setup-msbuild@v1
-#    - name: Setup NuGet
-#      uses: NuGet/setup-nuget@v1.0.5
-#    - name: Nuget Restore
-#      run: nuget restore "Onbox.Revit.Tests.Sample.sln"
-#    - name: Build Project
-#      run: msbuild "Onbox.Revit.Tests.Sample.sln" /p:Configuration=R2019 /p:Platform=x64
-#    - name: Upload a Build Artifact
-#      uses: actions/upload-artifact@v2.2.2
-#      with:
-#        path: tests\Onbox.Revit.Tests\test_project.zip
-     - name: Post
-       uses: Amadevus/pwsh-script@v2.0.1
-       with:
-         script: |
-            $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
-            $headers.Add("Content-Type", "application/x-www-form-urlencoded")
-            $body = "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&grant_type=client_credentials&scope=code%3Aall%20data%3Awrite%20data%3Aread%20bucket%3Acreate%20bucket%3Adelete"
-            $response = Invoke-RestMethod 'https://developer.api.autodesk.com/authentication/v1/authenticate' -Method 'POST' -Headers $headers -Body $body
-            $response | ConvertTo-Json
+    - uses: actions/checkout@v2
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v1
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.5
+    - name: Nuget Restore
+      run: nuget restore "Onbox.Revit.Tests.Sample.sln"
+    - name: Build Project
+      run: msbuild "Onbox.Revit.Tests.Sample.sln" /p:Configuration=R2019 /p:Platform=x64
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        path: tests\Onbox.Revit.Tests\test_project.zip
+    - name: Post
+      uses: Amadevus/pwsh-script@v2.0.1
+      with:
+       script: |
+          $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
+          $headers.Add("Content-Type", "application/x-www-form-urlencoded")
+          $body = "client_id=${{ secrets.CLIENT_ID }}&client_secret=${{ secrets.CLIENT_SECRET }}&grant_type=client_credentials&scope=code%3Aall%20data%3Awrite%20data%3Aread%20bucket%3Acreate%20bucket%3Adelete"
+          $response = Invoke-RestMethod 'https://developer.api.autodesk.com/authentication/v1/authenticate' -Method 'POST' -Headers $headers -Body $body
+          $token = $response."access_token"
+          Write-Host Acquired token: $token
+          $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
+          $headers.Add("Authorization", "Bearer $token")
+          $headers.Add("accept-encoding", "gzip, deflate")
+          $headers.Add("Content-Type", "application/zip")
+          $app_id = revit_tests
+          $test_project = tests\Onbox.Revit.Tests\test_project.zip
+          $response = Invoke-RestMethod 'https://developer.api.autodesk.com/oss/v2/buckets/$app_id/objects/$app_id.zip' -Method 'PUT' -Infile $test_project -Headers $headers -Body $body
+          Write-Host $response
