--- a/.github/workflows/revit_tests_project.yml
+++ b/.github/workflows/revit_tests_project.yml
@@ -39,5 +39,5 @@ jobs:
           $app_id = "revit_tests"
           $test_project = "tests\Onbox.Revit.Tests\test_project.zip"
           $url = "https://developer.api.autodesk.com/oss/v2/buckets/$app_id/objects/$app_id.zip"
-          $response = Invoke-RestMethod $url -Method 'PUT' -Infile $test_project -Headers $headers -Body $body
+          $response = Invoke-RestMethod $url -Method 'PUT' -Infile $test_project -Headers $headers
           Write-Host $response
