--- a/.github/workflows/revit_tests_project.yml
+++ b/.github/workflows/revit_tests_project.yml
@@ -47,16 +47,20 @@ jobs:
         # Get Download Signed URL
         $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
         $headers.Add("Authorization", "Bearer $token")
+        $headers.Add("Content-Type", "application/json")
+        $body = "{}"
         $url = "https://developer.api.autodesk.com/oss/v2/buckets/$app_id/objects/$app_id.zip/signed"
-        $response = Invoke-RestMethod $url -Method 'POST' -Headers $headers
+        $response = Invoke-RestMethod $url -Method 'POST' -Headers $headers -Body $body
         $download_url = $response."signedUrl"
         Write-Host Got signed download url: Url $download_url
         # Get Upload Signed URL
         $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
         $headers.Add("Authorization", "Bearer $token")
+        $headers.Add("Content-Type", "application/json")
+        $body = "{}"
         $resultFile = "result.xml"
         $url = "https://developer.api.autodesk.com/oss/v2/buckets/$app_id/objects/$resultFile/signed?access=readwrite"
-        $response = Invoke-RestMethod -Method 'POST' -Headers $headers
+        $response = Invoke-RestMethod -Method 'POST' -Headers $headers -Body $body
         $upload_url = $response."signedUrl"
         Write-Host Got signed download url: Url $upload_url
         # Send WorkItem
