--- a/.github/workflows/revit_tests_project.yml
+++ b/.github/workflows/revit_tests_project.yml
@@ -60,7 +60,7 @@ jobs:
         $body = "{}"
         $resultFile = "result.xml"
         $url = "https://developer.api.autodesk.com/oss/v2/buckets/$app_id/objects/$resultFile/signed?access=readwrite"
-        $response = Invoke-RestMethod -Method 'POST' -Headers $headers -Body $body
+        $response = Invoke-RestMethod $url -Method 'POST' -Headers $headers -Body $body
         $upload_url = $response."signedUrl"
         Write-Host Got signed download url: Url $upload_url
         # Send WorkItem
