--- a/.github/workflows/tests_results.yml
+++ b/.github/workflows/tests_results.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test_results:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Post
         uses: Amadevus/pwsh-script@v2.0.1
@@ -14,11 +14,8 @@ jobs:
             $url = "https://developer.api.autodesk.com/oss/v2/signedresources/6a2d37c5-adab-414f-993c-83149d58bb72?region=US"
             $results = "result.xml"
             $response = Invoke-RestMethod $url -Method 'GET' -OutFile $results
-      - name: NUnit Report
-        uses: dorny/test-reporter@v1
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
         with:
-          name: NUnit Tests
-          path: result.xml
-          reporter: dotnet-trx
-          list-suites: 'all'
-          fail-on-error: 'true'
+          files: result.xml
