--- a/.github/workflows/tests_results.yml
+++ b/.github/workflows/tests_results.yml
@@ -14,6 +14,7 @@ jobs:
             $url = "https://developer.api.autodesk.com/oss/v2/signedresources/6a2d37c5-adab-414f-993c-83149d58bb72?region=US"
             $results = "result.xml"
             $response = Invoke-RestMethod $url -Method 'GET' -OutFile $results
+            Get-Content result.xml
       - name: Publish Unit Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
