--- a/.github/workflows/tests_results.yml
+++ b/.github/workflows/tests_results.yml
@@ -5,7 +5,9 @@ on:
 
 jobs:
   test_results:
-    runs-on: ubuntu-latest
+   
+    runs-on: windows-latest
+    
     steps:
       - name: Get Results XML
         uses: Amadevus/pwsh-script@v2.0.1
