--- a/.github/workflows/test_result.yml
+++ b/.github/workflows/test_result.yml
@@ -17,5 +17,6 @@ jobs:
             $url = "https://developer.api.autodesk.com/oss/v2/signedresources/13e7ef86-3351-4971-8fae-9be9ac366046?region=US"
             $response = Invoke-RestMethod $url -Method 'GET' -Headers $headers | Out-File result.xml
             $path = "result.xml"
+            [xml]$doc = Get-Content -Path $path
             $xpath = "test-run/test-suite/test-suite"
-            Select-Xml -Xml $path -XPath $xpath 
+            Select-Xml -Xml $doc -XPath $xpath 
