--- a/.github/workflows/test_result.yml
+++ b/.github/workflows/test_result.yml
@@ -16,5 +16,8 @@ jobs:
             Write-Host Downloading...
             $url = "https://developer.api.autodesk.com/oss/v2/signedresources/13e7ef86-3351-4971-8fae-9be9ac366046?region=US"
             $response = Invoke-RestMethod $url -Method 'GET' -Headers $headers | Out-File result.xml
-            [xml]$XmlDocument = Get-Content -Path result.xml
-            $XmlDocument | Format-Table -AutoSize
+      - name: Get XML Info
+        uses: mavrosxristoforos/get-xml-info@1.0
+        with:
+          xml-file: result.xml
+          xpath: //test-run
