--- a/.github/workflows/test_result.yml
+++ b/.github/workflows/test_result.yml
@@ -16,8 +16,11 @@ jobs:
             Write-Host Downloading...
             $url = "https://developer.api.autodesk.com/oss/v2/signedresources/13e7ef86-3351-4971-8fae-9be9ac366046?region=US"
             $response = Invoke-RestMethod $url -Method 'GET' -Headers $headers | Out-File result.xml
-      - name: Get XML Info
-        uses: mavrosxristoforos/get-xml-info@1.0
-        with:
-          xml-file: result.xml
-          xpath: test-run
+            [xml]$XML = Get-Content $result.xml
+            $TOTAL = $XML.'test-run'.total
+            $PASSED = $XML.'test-run'.passed
+            $FAILED = $XML.'test-run'.failed
+            $INCONCLUSIVE = $XML.'test-run'.inconclusive
+            $SKIPPED = $XML.'test-run'.skipped
+            $DURATION = $XML.'test-run'.duration
+            Write-Host Test total $TOTAL passed $PASSED
