--- a/.github/workflows/test_result.yml
+++ b/.github/workflows/test_result.yml
@@ -8,13 +8,15 @@ jobs:
     runs-on: windows-latest
 
     steps:
-
+      
       - name: Download
         uses: Amadevus/pwsh-script@v2.0.1
         with:
           script: |
             Write-Host Downloading...
-            $response = Invoke-RestMethod https://developer.api.autodesk.com/oss/v2/signedresources/a83517ce-e219-44ba-8bcf-ffb35015e661?region=US -Method 'GET' -Headers $headers | Out-File result.xml
+            $url = "https://developer.api.autodesk.com/oss/v2/signedresources/a83517ce-e219-44ba-8bcf-ffb35015e661?region=US"
+            $response=Invoke-RestMethod $url
+            $response.Save("C:\Users\Thiago\Desktop\result.xml")
             [xml]$xml = Get-Content result.xml
             $test_cases = $xml.SelectNodes("//test-case")
             $color = [console]::ForegroundColor
