--- a/.github/workflows/revit_tests_project.yml
+++ b/.github/workflows/revit_tests_project.yml
@@ -29,7 +29,7 @@ jobs:
       with:
        script: |
         # Acquire token
-        $bucket_key = ${{ secrets.BUCKET_KEY }}
+        $bucket_key = ${{ secrets.BUCKET_K }}
         $client_id = ${{ secrets.CLIENT_ID }}
         $client_secret = ${{ secrets.CLIENT_SECRET }}
         $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
